owlcms-service-deployment-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: owlcms-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: owlcms-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owlcms-dep
  labels:
    app: owlcms-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owlcms-app
  template:
    metadata:
      labels:
        app: owlcms-app
    spec:
      containers:
      - name: owlcms
        image: the646project/owlcms:5.8.0
        ports:
        - containerPort: 8080
