owlcms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owlcms-svc
  labels:
    app: owlcms-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: owlcms-app
