owlcms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owlcms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - app.the646project.com
      secretName: owlcms-tls
  rules:
  - host: "app.the646project.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: owlcms-service
            port:
              number: 80
